# PolicyPlain

./: .gitignore  README.md
docs/: 层级设计与架构.md  技术实施步骤.md  项目实施流程与顺序.md  项目概要设计.md  项目需求分析.md
policy-backend/: .env.example  .gitignore  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt
policy-backend/alembic/: env.py
policy-backend/alembic/versions/: p001_initial_users_and_policy_explanations.py  p002_users_email_instead_of_username.py  p003_register_email_codes.py  p004_drop_register_email_codes_for_redis.py  p005_policy_followups.py
policy-backend/core/: auth.py  cache.py  mail.py  ocr.py  register_code.py
policy-backend/dependencies/: __init__.py
policy-backend/models/: __init__.py  register_email_code.py  user.py
policy-backend/repository/: policy_repo.py  register_code_repo.py  user_repo.py
policy-backend/routers/: auth.py  health.py  policy.py  user_router.py  users.py
policy-backend/schemas/: __init__.py  cache_schema.py  policy.py  response_schema.py  user_schema.py
policy-backend/scripts/: init_db.ps1  init_db.sh
policy-backend/services/: explain_llm.py  streaming_partial.py  url_fetch.py
policy-backend/settings/: __init__.py  setting.env
policy-backend/tasks/: __init__.py
policy-frontend/: index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
policy-frontend/src/: App.vue  index.css  main.ts
policy-frontend/src/apis/: auth_api.ts  policy_api.ts  request.ts  user_api.ts
policy-frontend/src/components/: AppLayout.vue  AuthLayout.vue  DisplayComfortBar.vue  ExplainResultElder.vue  (+1 more)
(+10 files in other folders)
