[project]
name = "policy-backend"
version = "0.1.0"
description = "PolicyPlain API backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosmtplib==5.0.0",
    "alembic==1.17.2",
    "asyncpg>=0.30.0",
    "email-validator==2.3.0",
    "fastapi==0.124.2",
    "fastapi-mail==1.6.0",
    "httpx==0.28.1",
    "openai>=1.55.0",
    "pwdlib[argon2]==0.3.0",
    "pydantic==2.12.5",
    "pydantic-settings==2.12.0",
    "pyjwt==2.10.1",
    "python-dotenv==1.2.1",
    "python-multipart==0.0.20",
    "redis==7.1.0",
    "sqlalchemy[asyncio]==2.0.45",
    "trafilatura>=2.0.0",
    "uvicorn[standard]==0.38.0",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
